# GraphRAG

./: .cursorrules  .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  MEMORY.md  README.md  Telemetry.md  agent.py  app.py  c4.fdx  cleanup_review.py  debug_export.py  docker-compose.stack.yml  docker-compose.yml  extract_validation.py  extraction_graph.py  extraction_llm.py  graph_qa_dump.json  hitl.py  ingest.py  lexicon.json  lexicon.py  master_lexicon.json  metrics.py  neo4j_loader.py  parser.py  pipeline_runs.py  pipeline_state.json  pipeline_state.py  producer_notes.py  pyproject.toml  qa_entities.py  raw_scenes.json  reconcile.py  render.yaml  requirements.txt  schema.py  strategy.md  (+1 more)
.cursor/rules/: gsd-workflow.mdc
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-config-script-generalized-dashboard/: 01-CONTEXT.md  01-DISCUSSION-LOG.md
.planning/phases/02-graph-reliability-empty-states/: 02-CONTEXT.md  02-DISCUSSION-LOG.md
.planning/phases/03-reconciliation-for-operators/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md
.planning/phases/04-production-complexity-signal/: 04-01-SUMMARY.md
.planning/phases/13-verify-hitl-audit-trail/: 13-01-PLAN.md  13-01-SUMMARY.md  13-CONTEXT.md
domains/screenplay/: adapter.py  auditors.py  rules.py  schemas.py
etl_core/: __init__.py  config.py  errors.py  graph_engine.py  state.py  telemetry.py
samples/: README.md
samples/ludwig/: Ludwig.fdx
